[gd_scene load_steps=2 format=3 uid="uid://2grtpdddiryx"]

[ext_resource type="Script" path="res://scenes/components/boss_attack.gd" id="1_u0l0j"]

[node name="BossAttack" type="Node2D"]
script = ExtResource("1_u0l0j")

[node name="BossAttackDuration" type="Timer" parent="."]
one_shot = true

[node name="BossAttackSprite" type="Sprite2D" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
disabled = true

[node name="BossAttackSFX" type="AudioStreamPlayer2D" parent="."]
